syntax = "proto2";
option java_outer_classname = "RpcMsgProto";//生成的数据访问类的类名
option java_package = "com.ning.netty.demo.protobuf2";
message RpcMsg{
    enum MsgType{
        PersonType = 1;
        CarType = 2;
        PointType = 3 ;
    }
    required MsgType msg_type = 1;
    oneof msg {
        Person person = 2;
        Car car = 3;
        Point point = 4;
    }

}
message Person {
    optional int32 id = 1;//同上
    optional string name = 2;//必须字段，在后面的使用中必须为该段设置值
    optional string email = 3;//可选字段，在后面的使用中可以自由决定是否为该字段设置值
}
message Car{
    optional string name = 1;
    optional int32 price = 2 ;
}
message Point {
    optional int32 x = 1;
    optional int32 y = 2;
}